ASSERTION FAILED: !begin.isIndefinite() in WebCore::SVGSMILElement::resolveFirstInterval. https://bugs.webkit.org/show_bug.cgi?id=131097

Reviewed by Darin Adler.

Source/WebCore:
According to smil animation reference, max attribute cannot be 0.

Test: svg/animations/smil-animation-max-attribute-zero-crash.svg

* svg/animation/SVGSMILElement.cpp:
(WebCore::SVGSMILElement::maxValue):
  changed (result < 0) to (result <= 0)

LayoutTests:
Test added.

* svg/animations/smil-animation-max-attribute-zero-crash-expected.txt: Added.
* svg/animations/smil-animation-max-attribute-zero-crash.svg: Added.


Canonical link: https://commits.webkit.org/150175@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167761 268f45cc-cd09-0410-ab3c-d52691b4dbfc